# bill-ingestion

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
src/bill_ingestion/: __init__.py  config.py  main.py
src/bill_ingestion/cloud/: gmail_service.py  google_drive.py
src/bill_ingestion/converters/: pdf_to_markdown.py
src/bill_ingestion/downloaders/: bordgais.py
src/bill_ingestion/scheduler/: tasks.py
src/bill_ingestion/utils/: __init__.py  exceptions.py  logger.py
tests/: test_config.py  test_exceptions.py  test_logger.py  test_pdf_to_markdown.py
